# big-integer-calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  commands.txt
src/: calc.c
src/calculator/: calculator.c  calculator.h
src/long_arithmetic/: long_arithmetic.c  long_arithmetic.h
src/utils/cstring/: cstring.c  cstring.h
src/utils/errors/: errors.h
src/utils/expression/: expression.c  expression.h
src/utils/futils/: futils.c  futils.h
src/utils/vector/: vector.c  vector.h
